menu and other udates